--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-/opt/render/project/src/.venv/bin/python -m pip install --upgrade pip
+--upgrade pip
 Pyrebase4==4.7.1
 requests==2.23.0
 opencv-python==4.8.1.78
