--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Pyrebase4==4.7.1
-requests==2.22.0
-opencv-python==4.8.1.78
-uvicorn==0.23.2
-urllib3==1.25.11
-deepface==0.0.79
-fastapi==0.104.0
+Pyrebase4
+requests
+opencv-python
+uvicorn
+urllib3
+deepface
+fastapi
