--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-Pyrebase4
-requests
-opencv-python
-uvicorn
-urllib3
-deepface
-fastapi
-gunicorn
+Pyrebase4==4.7.1
+requests==2.23.0
+opencv-python==4.8.1.78
+urllib3==1.25.11
+uvicorn==0.23.2
+deepface==0.0.79
+fastapi==0.104.0
+python-dateutil==2.8.2
+python-jwt==4.0.0
+pydantic==2.4.2
+pydantic_core==2.10.1
